# ChangeLog for virtual/perl-ExtUtils-ParseXS
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/perl-ExtUtils-ParseXS/ChangeLog,v 1.4 2009/09/15 07:28:13 tove Exp $

*perl-ExtUtils-ParseXS-2.20.0401 (15 Sep 2009)

  15 Sep 2009; Torsten Veller <tove@gentoo.org>
  +perl-ExtUtils-ParseXS-2.20.0401.ebuild:
  Version bump

*perl-ExtUtils-ParseXS-2.20 (03 Jul 2009)

  03 Jul 2009; Torsten Veller <tove@gentoo.org>
  +perl-ExtUtils-ParseXS-2.20.ebuild:
  Version bump

*perl-ExtUtils-ParseXS-2.19 (01 Nov 2008)
*perl-ExtUtils-ParseXS-2.18 (01 Nov 2008)

  01 Nov 2008; Yuval Yaari <yuval@gentoo.org> +metadata.xml,
  +perl-ExtUtils-ParseXS-2.18.ebuild, +perl-ExtUtils-ParseXS-2.19.ebuild:
  Adding virtuals for dual-lifed modules that come with perl-5.10
