@@ -1,6 +1,12 @@
 # ChangeLog for virtual/perl-ExtUtils-ParseXS
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-ExtUtils-ParseXS/ChangeLog,v 1.4 2009/09/15 07:28:13 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-ExtUtils-ParseXS/ChangeLog,v 1.5 2009/10/06 18:47:55 tove Exp $
+
+*perl-ExtUtils-ParseXS-2.21 (06 Oct 2009)
+
+  06 Oct 2009; Torsten Veller <tove@gentoo.org>
+  +perl-ExtUtils-ParseXS-2.21.ebuild:
+  Version bump
 
 *perl-ExtUtils-ParseXS-2.20.0401 (15 Sep 2009)
 
